normal bg: color

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -3,7 +3,7 @@
   margin: 0 auto;
   width: 1340px;
   height: 1409px;
-  background-color: rgb(189, 189, 189);//#fff
+  background-color: #fff;
   border-radius: 10px;
 }
 
