--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -9,6 +9,7 @@
         margin-bottom: 0px;
     }
     .cartTitle{
+        min-height: 48px ;
         text-align: center;
         font-style: normal;
         font-weight: 800;
@@ -32,6 +33,11 @@
             background: #FFFFFF;
             box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.04);
             border-radius: 5px;
+            &:hover{
+                background: #FFFFFF;
+                box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.04);
+            }
+           
             
         }
         button{ 
@@ -46,7 +52,19 @@
             line-height: 17px;
             text-align: center;
             letter-spacing: 0.015em;
-            
+            cursor: pointer;
+            border-radius: 5px;
+            &:hover{
+                background: darken(#F3F3F3,5%);
+            }
+            &:disabled{
+                cursor: default;
+                pointer-events: none;
+                &:hover{
+                    cursor: default;
+                    background: #F3F3F3;
+                }
+            }
         }
     }
     .addCard{
