--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -18,6 +18,7 @@
       right: 0px;
       position: relative;
       width: 240px;
+      
       svg{
         margin-right: 6px;
         margin-bottom: 1px;
@@ -31,6 +32,7 @@
         margin-right: 6px;
       }
       span{
+        margin-bottom: 20x;
         cursor: pointer;
         font-style: normal;
         font-weight: normal;
@@ -44,13 +46,13 @@
         padding: 13px 0;
         position: absolute;
         right: 0;
-        top: 26px;
+        top: 20px;
         width: 132px;
         height: 136px;
         background: #FFFFFF;
         box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.09);
         border-radius: 10px;
-        transition: visibility 1s ease-in-out;
+        
         .itemSortNotAct{
           cursor: pointer;
           height: 38px;
@@ -66,7 +68,7 @@
           }
         }
         .itemSortAct{
-          background: rgba(254, 95, 30, 0.05);
+          // background: rgba(254, 95, 30, 0.05);
           color: #FE5F1E;
           cursor: pointer;
           height: 38px;
@@ -76,7 +78,10 @@
           font-size: 14px;
           line-height: 17px;
           letter-spacing: 0.015em;
-         
+          &:hover{
+            background: rgba(254, 95, 30, 0.05);
+            color: #FE5F1E;
+          }
         }
       }
     }
